Fix spacing of movement controls

--- a/client/app/main/movement.styl
+++ b/client/app/main/movement.styl
@@ -31,19 +31,19 @@
     left 120px
     background url('/assets/images/ui.png') -48px 0 no-repeat
   .northeast
-    top 23px
+    top 24px
     left 108px
     background url('/assets/images/ui.png') -96px -48px no-repeat
   .northwest
     top 24px
-    left 24px
+    left 28px
     background url('/assets/images/ui.png') -32px -48px no-repeat
   .southeast
-    top 110px
+    top 108px
     left 108px
     background url('/assets/images/ui.png') -64px -48px no-repeat
   .southwest
-    top 111px
+    top 108px
     left 28px
     background url('/assets/images/ui.png') 0 -48px no-repeat
   .compass
